Username is no longer white on mobile

--- a/home/static/css/style.css
+++ b/home/static/css/style.css
@@ -62,6 +62,9 @@ h5,
     top: 0;
     position: relative;
   }
+  .navbar-dark .navbar-nav .nav-link {
+    color: #000;
+  }
 }
 
 .ftco-navbar-light .navbar-nav>.nav-item>.nav-link {
